--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Prosper</title>
 </head>
 <body>
+    <script src="../backend-track/task.js"></script>
     <h1>ERAVWUVIEKE PROSPER ILOUOGHENE</h1>
 </body>
 </html>
